test_regress/t/t_inst_array_bad.out
%Error: t/t_inst_array_bad.v:14:28: Input port connection 'onebit' as part of a module instance array requires 1 or 8 bits, but connection's VARREF 'onebitbad' generates 9 bits. (IEEE 1800-2023 23.3.3)
                                  : ... note: In instance 't'
   14 |    sub sub [7:0] (allbits, onebitbad, bitout);
      |                            ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
